force-app/main/default/objects/EDU_In_The_Classroom_Application__c/EDU_In_The_Classroom_Application__c.object-meta.xml
<CustomObject>
    <label>EDU In Your Classroom Application</label>
    <nameField>
        <label>EDU In The Classroom Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EDU In Your Classroom Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>