force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/App_Name_Consult__c.field-meta.xml
<CustomField>
    <fullName>App_Name_Consult__c</fullName>
    <formula>Teacher_Name__c  &amp;&quot; - &quot;&amp; School_Name_IYC_EDU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>App Name Consult</label>
    <type>Text</type>
</CustomField>