force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/BTA_Presentation_Date_1st_Choice__c.field-meta.xml
<CustomField>
    <fullName>BTA_Presentation_Date_1st_Choice__c</fullName>
    <label>BTA Presentation Date - 1st Choice</label>
    <type>Date</type>
</CustomField>