force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/Comments_Questions__c.field-meta.xml
<CustomField>
    <fullName>Comments_Questions__c</fullName>
    <label>Comments/Questions</label>
    <length>2551</length>
    <type>LongTextArea</type>
</CustomField>