force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/Email_IYC_EDU__c.field-meta.xml
<CustomField>
    <fullName>Email_IYC_EDU__c</fullName>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>