force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/Grade_s_Attending_IYC_EDU__c.field-meta.xml
<CustomField>
    <fullName>Grade_s_Attending_IYC_EDU__c</fullName>
    <label>Grade(s) Attending</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>