force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/Home_Classroom_Other__c.field-meta.xml
<CustomField>
    <fullName>Home_Classroom_Other__c</fullName>
    <label>Home? Classroom? Other?</label>
    <type>TextArea</type>
</CustomField>