force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/MS_Presentation_Date_1st_Choice__c.field-meta.xml
<CustomField>
    <fullName>MS_Presentation_Date_1st_Choice__c</fullName>
    <description>Moving Stories</description>
    <label>MS - Presentation Date - 1st Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>December 9th, 2019</fullName>
            </value>
            <value>
                <fullName>December 10th, 2019</fullName>
            </value>
            <value>
                <fullName>December 12th, 2019</fullName>
            </value>
            <value>
                <fullName>December 13th, 2019</fullName>
            </value>
            <value>
                <fullName>December 16th, 2019</fullName>
            </value>
            <value>
                <fullName>December 17th, 2019</fullName>
            </value>
            <value>
                <fullName>December 18th, 2019</fullName>
            </value>
            <value>
                <fullName>December 19th, 2019</fullName>
            </value>
            <value>
                <fullName>December 20th, 2019</fullName>
            </value>
            <value>
                <fullName>January 6th, 2020</fullName>
            </value>
            <value>
                <fullName>January 7th, 2020</fullName>
            </value>
            <value>
                <fullName>January 8th, 2020</fullName>
            </value>
            <value>
                <fullName>January, 9th, 2020</fullName>
            </value>
            <value>
                <fullName>January 10th, 2020</fullName>
            </value>
            <value>
                <fullName>November 11</fullName>
                <isActive>false</isActive>
                <label>November 11</label>
            </value>
            <value>
                <fullName>November 12</fullName>
                <isActive>false</isActive>
                <label>November 12</label>
            </value>
            <value>
                <fullName>November 13</fullName>
                <isActive>false</isActive>
                <label>November 13</label>
            </value>
            <value>
                <fullName>November 14</fullName>
                <isActive>false</isActive>
                <label>November 14</label>
            </value>
            <value>
                <fullName>November 15</fullName>
                <isActive>false</isActive>
                <label>November 15</label>
            </value>
            <value>
                <fullName>November 18</fullName>
                <isActive>false</isActive>
                <label>November 18</label>
            </value>
            <value>
                <fullName>November 19</fullName>
                <isActive>false</isActive>
                <label>November 19</label>
            </value>
            <value>
                <fullName>November 20</fullName>
                <isActive>false</isActive>
                <label>November 20</label>
            </value>
            <value>
                <fullName>November 21</fullName>
                <isActive>false</isActive>
                <label>November 21</label>
            </value>
            <value>
                <fullName>November 22</fullName>
                <isActive>false</isActive>
                <label>November 22</label>
            </value>
            <value>
                <fullName>November 4</fullName>
                <isActive>false</isActive>
                <label>November 4</label>
            </value>
            <value>
                <fullName>November 5</fullName>
                <isActive>false</isActive>
                <label>November 5</label>
            </value>
            <value>
                <fullName>November 6</fullName>
                <isActive>false</isActive>
                <label>November 6</label>
            </value>
            <value>
                <fullName>November 7</fullName>
                <isActive>false</isActive>
                <label>November 7</label>
            </value>
            <value>
                <fullName>November 8</fullName>
                <isActive>false</isActive>
                <label>November 8</label>
            </value>
            <value>
                <fullName>October 10</fullName>
                <isActive>false</isActive>
                <label>October 10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>