force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/Number_of_Students_Attending__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Students_Attending__c</fullName>
    <label>Number of Students Attending</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>