force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/Phone_Number_IYC_Edu__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_IYC_Edu__c</fullName>
    <label>Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>