force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/Presentation_Date_2nd_Choice__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Date_2nd_Choice__c</fullName>
    <label>BTA - Presentation Date - 2nd Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>January 3, 2020</fullName>
            </value>
            <value>
                <fullName>January 10, 2020</fullName>
            </value>
            <value>
                <fullName>January 17, 2020</fullName>
            </value>
            <value>
                <fullName>January 24, 2020</fullName>
            </value>
            <value>
                <fullName>January 31, 2020</fullName>
            </value>
            <value>
                <fullName>February 7, 2020</fullName>
            </value>
            <value>
                <fullName>February 14, 2020</fullName>
            </value>
            <value>
                <fullName>February 21, 2020</fullName>
            </value>
            <value>
                <fullName>February 28, 2020</fullName>
            </value>
            <value>
                <fullName>March 13, 2020</fullName>
            </value>
            <value>
                <fullName>March 20, 2020</fullName>
            </value>
            <value>
                <fullName>March 27, 2020</fullName>
            </value>
            <value>
                <fullName>April 3, 2020</fullName>
            </value>
            <value>
                <fullName>April 10, 2020</fullName>
            </value>
            <value>
                <fullName>April 17, 2020</fullName>
            </value>
            <value>
                <fullName>April 24, 2020</fullName>
            </value>
            <value>
                <fullName>May 1, 2020</fullName>
            </value>
            <value>
                <fullName>May 8, 2020</fullName>
            </value>
            <value>
                <fullName>May 15, 2020</fullName>
            </value>
            <value>
                <fullName>May 22, 2020</fullName>
            </value>
            <value>
                <fullName>April 20, 2020</fullName>
                <isActive>false</isActive>
                <label>April 20, 2020</label>
            </value>
            <value>
                <fullName>April 21, 2020</fullName>
                <isActive>false</isActive>
                <label>April 21, 2020</label>
            </value>
            <value>
                <fullName>April 22, 2020</fullName>
                <isActive>false</isActive>
                <label>April 22, 2020</label>
            </value>
            <value>
                <fullName>April 23, 2020</fullName>
                <isActive>false</isActive>
                <label>April 23, 2020</label>
            </value>
            <value>
                <fullName>August 16, 2019</fullName>
                <isActive>false</isActive>
                <label>August 16, 2019</label>
            </value>
            <value>
                <fullName>August 30, 2019</fullName>
                <isActive>false</isActive>
                <label>August 30, 2019</label>
            </value>
            <value>
                <fullName>December 20, 2019</fullName>
                <isActive>false</isActive>
                <label>December 20, 2019</label>
            </value>
            <value>
                <fullName>December 6, 2019</fullName>
                <isActive>false</isActive>
                <label>December 6, 2019</label>
            </value>
            <value>
                <fullName>November 22, 2019</fullName>
                <isActive>false</isActive>
                <label>November 22, 2019</label>
            </value>
            <value>
                <fullName>November 8, 2019</fullName>
                <isActive>false</isActive>
                <label>November 8, 2019</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>