force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/Presentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Type__c</fullName>
    <label>Presentation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Behind the Animation</fullName>
                <default>true</default>
                <label>Behind the Animation</label>
            </value>
            <value>
                <fullName>Moving Stories: VR and AR in the Classroom</fullName>
            </value>
            <value>
                <fullName>Real to Reel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>