force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/School_Name_IYC_EDU__c.field-meta.xml
<CustomField>
    <fullName>School_Name_IYC_EDU__c</fullName>
    <label>School Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>