force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/X1st_Choice_for_Presentation_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Choice_for_Presentation_Date__c</fullName>
    <label>1st Choice for Presentation Date</label>
    <type>Date</type>
</CustomField>