force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/X2nd_Choice_for_Presentation_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Choice_for_Presentation_Date__c</fullName>
    <label>2nd Choice for Presentation Date</label>
    <type>Date</type>
</CustomField>