force-app/main/default/objects/EDU_In_The_Classroom_Application__c/fields/X2nd_Choice_for_Presentation_Time__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Choice_for_Presentation_Time__c</fullName>
    <label>2nd Choice for Presentation Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>