force-app/main/default/objects/EDU_In_The_Classroom_Application__c/listViews/Behind_The_Animation.listView-meta.xml
<ListView>
    <fullName>Behind_The_Animation</fullName>
    <columns>NAME</columns>
    <columns>X1st__c</columns>
    <columns>Presentation_Date_2nd_Choice__c</columns>
    <columns>School_Name_IYC_EDU__c</columns>
    <columns>Teacher_Name__c</columns>
    <columns>Presentation_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Presentation_Type__c</field>
        <operation>equals</operation>
        <value>Behind the Animation</value>
    </filters>
    <label>Behind The Animation</label>
</ListView>