force-app/main/default/objects/EDU_In_The_Classroom_Application__c/listViews/Real_to_Reel.listView-meta.xml
<ListView>
    <fullName>Real_to_Reel</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>School_Name_IYC_EDU__c</columns>
    <columns>Teacher_Name__c</columns>
    <columns>Presentation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Presentation_Type__c</field>
        <operation>equals</operation>
        <value>Real to Reel</value>
    </filters>
    <label>Real to Reel</label>
</ListView>